# product-api/handlers/get.go
@@ -10,12 +10,13 @@ import (
 // Returns a list of products
 // responses:
 //  200: productsResponse
+//  500: internalServerError
 
-func (p *Products) GET(wr http.ResponseWriter, r *http.Request) {
+func (p *Products) GET(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("Products endpoint is called")
 	lp := data.GetProducts()
-	err := lp.ToJSON(wr)
+	err := lp.ToJSON(rw)
 	if err != nil {
-		http.Error(wr, "Oops something went wrong", http.StatusInternalServerError)
+		http.Error(rw, "Oops something went wrong", http.StatusInternalServerError)
 	}
 }
